# discord-vanity-sniper

./: Cargo.toml  LICENSE  README.md
src/: config.json  main.rs
